kind-cluster/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver    
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      serviceAccount: server
      containers:
        - name: goserver
          image: "arfurlaneto/goserver:latest"
          imagePullPolicy: Never
          resources:
            requests: 
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 4
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
          volumeMounts:
            - mountPath: "/go/files"
              name: volume-text-file
              readOnly: true
            - mountPath: "/go/pvc"
              name: goserver-volume
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
        - name: volume-text-file
          configMap:
            name: goserver-file
            items:
            - key: TEXT
              path: "text.txt"
