kind-cluster/k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-h
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - port: 3306
  clusterIP: None
