kind-cluster/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: "kubernetes.local"
    http:
      paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: goserver-service
              port:
                number: 80
